# parser-os

./: .acr-cache-bust  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_PROPOSAL.md  BRAINDUMP_SESSION_2026-06-08.md  BRAIN_DUMP.md  Dockerfile  EXTENDING.md  GPU_HANDOFF.md  INTEGRATION_GUIDE.md  MEASUREMENT_REPORT.md  MODEL_INVENTORY.md  OPTBOT_HANDOFF_README.md  OUTPUTS_FOR_UI.md  OrbitBrief_PM_Field_Guide.docx  PRODUCTION_GAPS.md  README.md  RECOVERY.md  SYSTEM_README.md  UI_SCHEMATIC_UPDATE.md  WEEK1_RESULTS.md  WEEK2_RESULTS.md  WEEK3_RESULTS.md  WEEK4_RESULTS.md  WEEK5_RESULTS.md  WEEK6_RESULTS.md  _build_batch_labeler.py  _diag_compile.py  _env_latest.json  _labeler_core.py  _test_calibration_gate.py  _test_calibrator_train.py  _test_feedback_blob.py  _test_value_norm.py  _train_semantic_rules.py  _validate_fixes.py  aps_b_prompt_results.json  aps_b_raw_A.txt  aps_b_raw_B.txt  (+16 more)
_handoff_COPPER_002_parser_gaps/: README_FOR_CODER.txt
_ob_test_out/: 00_envelope.json  10_pack_prior_state.json  11_site_reality_state.json  90_inspection_report.json  91_inspection_report.html  PM_EXECUTIVE_SUMMARY.html  PM_EXECUTIVE_SUMMARY.md  PM_HANDOFF.html  PM_HANDOFF.json  PM_HANDOFF.md  SA_REVIEW_PACKET.html  SA_REVIEW_PACKET.md  manifest.json  pipeline_log.json  polish_report.json
app/: README.md  __init__.py  cli.py  main.py
contracts/: CHANGELOG.md  DEVELOPER_INTEGRATION_PLAYBOOK.md  README.md  orbitbrief.input.v2.yaml  parser-manifest.v1.yaml  rebuild-latest.response.v1.yaml
docs/: COPPER_CABLING_IDENTITY_INTEGRATION.md  CURSOR_APPLY_PROMPT.md  REPRODUCE_parser_to_envelope.md
orbitbrief_page_os/: __init__.py
real_data_cases/: README.md  STRESS_GOLD_INDEX.md
runpod_detector/: LABELING_GUIDE.md  MAC_RUNPOD_PLAN.md  PM_GOLD_GUIDE.md  README.md  RUBRIC.md  SETUP_LABELING.md  VLLM_EMBEDDING_LORA.md  _split_util.py  build_facet_consensus.py  build_gold_eval.py  clean_labels_universal.py  diagnose_labels.py  expand_gate_labels.py  facet_agreement.py  gold_eval_keep_boundary.py  merge_qwen3_lora.py  pack_gate_pdf_image.sh  prepare_yolo_data.py  relabel_clean.py  rubric_adjudicate.py  rubric_relabel_deepseek.py  rubric_relabel_facets.py  run_all_gpu.sh  taxonomy.py  train_contrastive_encoder_gpu.py  train_contrastive_qwen3_lora.py  train_detector.py  train_gate_crossencoder.py  train_gate_rubric.py  train_pdf_image_gate.py  train_span_tagger_gpu.py  train_span_tagger_v2.py  train_type_head_gpu.py  train_type_head_v2.py  type_agreement.py  upload_to_azure.sh  verify_gold.py
(+788 files in other folders)
