[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purtera-evidence-mvp"
version = "0.1.0"
description = "Parser OS — Purtera evidence compiler (artifacts → atoms → graph → packets)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "sqlmodel>=0.0.16",
  "uvicorn>=0.28",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "beautifulsoup4>=4.12",
  "typer>=0.12",
  "rich>=13.0",
  "python-multipart>=0.0.9",
  "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.28",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
