[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purtera-evidence-mvp"
version = "0.1.0"
description = "Parser OS — Purtera evidence compiler (artifacts → atoms → graph → packets)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "sqlmodel>=0.0.16",
  "uvicorn>=0.28",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "beautifulsoup4>=4.12",
  "typer>=0.12",
  "rich>=13.0",
  "python-multipart>=0.0.9",
  "rapidfuzz>=3.0",
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "PyMuPDF>=1.24",
  "opencv-python-headless>=4.9",
  "Pillow>=10.0",
  "pypdfium2>=4.30",
  # v45.2: explicit deps that were transitively present in parser-os-service
  # but missed when packaging parser-os into a fresh image (e.g. parser-os-worker).
  # Domain pack loader (app/domain/loader.py) and pack router use PyYAML.
  "PyYAML>=6.0",
  "httpx>=0.27",
  "requests>=2.31",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
  # pytest 9.x triggers STATUS_STACK_BUFFER_OVERRUN (0xC0000409) on Windows /
  # CPython 3.12.3 in the demo dev environment.  Cap until pytest 9 is
  # confirmed stable on Windows or CI moves to Linux containers.
  "pytest>=8.0,<9",
  "httpx>=0.28",
]

[tool.setuptools.packages.find]
include = ["app*", "orbitbrief_page_os*"]

[tool.setuptools.package-data]
app = ["domain/*.yaml", "domain/ontology/*.yaml"]
orbitbrief_page_os = [
  "segmentation/core_runtime/chunks/*",
  "segmentation/headings/templates/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
